add search form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             </div>
         </div>
     </div>
+
+    <form action="">
+        <input type="text" placeholder="Search..." required>
+        <input type="button" value="Search">
+    </form>
 </body>
 
 </html>
