update search button, remove  button CSS

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>
     </div>
 
-    <form action="">
-        <input type="text" placeholder="Search..." required>
-        <input type="button" value="Search">
+    <form name="searchBar">
+        <input type="text" placeholder="Search..." name="searchQuery" required>
+        <input type="button" name="searchButton" value="Search">
     </form>
 </body>
 
