--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Digital Analog Clock</title>
+    <link rel="stylesheet" href="/css/style.css">
+    
 </head>
 
 <body>
@@ -30,8 +32,11 @@
             </g>
         </svg>
     </div><!-- .clockbox -->
+    <audio> 
+        <source src="../analog-watch-alarm_daniel-simion.mp3"/>
+    </audio>
 </main>
-
+<script src="/js/script.js"></script>
 </body>
 
 </html>
